--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 				<div class="subheading">DLS Audit Signoff</div>
 				<div class="body">
 					Similar to our PP Signoff, we have implemented this process which takes place before the designs are shared with engineers or presented in a dev-walkthrough. This process requires the feature designer to have a mandatory audit session with the design champion of their respective vertical. While this may seem like an additional step, we have developed several plugins to expedite this process.
-					<br>
-					<img src="./resources/content_images/DLSAudit-Light.png" alt="" id="DLSAudit"><p></p>
+					<br><p></p>
+					<img src="./resources/content_images/DLSAudit-Light.png" alt="" id="DLSAudit">
 					This signoff procedure ensures that designs comply with our standards and acts as an initial gatekeeping layer. Additionally, the process ensures that any new patterns or components required for a feature are either already built or are assigned to the relevant team for development. This reduces the likelihood of bottlenecks in the later stages of the release cycle.
 				</div>
 			</div>	
@@ -128,8 +128,17 @@
 						<img src="./resources/content_images/experimentation-Light.png" alt="" id="experimentation"><p></p>
 						Ignore my bad handwriting but this is the first draft of how our experimentation framework can function.
 					   </div>
-		</div>
-		</div>
+			</div>
+			<div class="divider">
+			</div>
+			<div class="heading-wrapper">
+				<div class="lhs" style="width: 100%;">
+					<div class="heading"><span style="font-style: italic">fin.</span></div>
+					<div class="subheading">
+						I aspire to periodically update this website whenever I have new and substantial information to share with all of you. Your continued support and engagement are greatly appreciated, and I hope to contribute further to the design system community in the future.
+					</div>
+				</div>
+			</div>
 		<div class="footer">
 			<div class="lhs">Last Edited on 15 July 2023</div>
 			<a href="https://www.2dots.xyz" target=”_blank”><div class="rhs">© R Trikha 2023</div></a>
