--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 				<div class="lhs" style="width: 100%;">
 					<div class="heading"><span style="font-style: italic">fin.</span></div>
 					<div class="subheading">
-						I aspire to periodically update this website whenever I have new and substantial information to share with all of you. Your continued support and engagement are greatly appreciated, and I hope to contribute further to the design system community in the future.
+						I aspire to periodically update this website whenever I have new and substantial information to share with all of you. I look forward to continuing my contributions to the design system community and providing valuable insights in the future.
 					</div>
 				</div>
 			</div>
