--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				<div class="body">
 					Similar to our PP Signoff, we have implemented this process which takes place before the designs are shared with engineers or presented in a dev-walkthrough. This process requires the feature designer to have a mandatory audit session with the design champion of their respective vertical. While this may seem like an additional step, we have developed several plugins to expedite this process.
 					<br><p></p>
-					<img src="./resources/content_images/DLSAudit-Light.png" alt="" id="DLSAudit">
+					<img src="./resources/content_images/DLSAudit-Light.png" alt="" id="DLSAudit"><p></p>
 					This signoff procedure ensures that designs comply with our standards and acts as an initial gatekeeping layer. Additionally, the process ensures that any new patterns or components required for a feature are either already built or are assigned to the relevant team for development. This reduces the likelihood of bottlenecks in the later stages of the release cycle.
 				</div>
 			</div>	
