updating copy on index

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							</div>
 					    </div>
 					    <div class="subheading">2. Theme provider for Multiple Verticals</div>
-					    <div class="body">The foundation of our system revolves around the concept of aliases, which allows us to infuse a unique personality into the entire Swiggy fleet when integrated into different verticals. At the core of this system are tokens like BG Primary, Button Primary, and Border Primary. However, the meaning and appearance of these tokens can vary based on the specific vertical they are applied to.
+					    <div class="body">The foundation of our colour system revolves around the concept of aliases, which allows us to infuse a unique personality into the entire Swiggy fleet when integrated into different verticals. At the core of this system are tokens like BG Primary, Button Primary, and Border Primary. However, the meaning and appearance of these tokens can vary based on the specific vertical they are applied to.
 						<br>To make it even flexible, our system includes support for vertical-dependent tokens within the pattern library. While this feature has some limitations, the need to create specific tokens arises infrequently. Nonetheless, we have provisions in place to address such requirements when they do arise.
 						<img src="./resources/content_images/themeProvider-Light.png" alt="" id="themeProvider">	
 						</div>
@@ -81,7 +81,7 @@
 				<div class="heading">How are things delegated and who runs the show?</div>
 				<div class="body">Our Design System has evolved over time and now has reached a point where a lot of things will eventually go auto-pilot. Each element in the system is placed meticulously and plays a vital role. To understand the delegation method, we'll need to understand the Champions Framework first.</div>
 				<div class="subheading">Champions Framework</div>
-				<div class="body">To gain a better understanding of this framework, it is essential to grasp its underlying architecture. The previously mentioned Core System and Pattern Library serve as the foundation for our Champions Framework, which is implemented both on the engineering and design fronts.
+				<div class="body">The previously mentioned Core System and Pattern Library serve as the foundation for our Champions Framework, which is implemented both on the engineering and design fronts.
 					<br>
 					The framework operates on a straightforward principle: every vertical maintains its pattern library, and these UI patterns are collaboratively developed by champions from both the design and engineering domains. These champions act as gatekeepers and advocates for their respective charters.
 					<br><p></p>
@@ -114,17 +114,17 @@
 			</div>
 			<div class="content">
 				<div class="heading">What are we working on currently?</div>
-				<div class="body">Attempting to talk about the intricacies of our design system would be a complex task. However, I will focus on three fundamental aspects that provide insights into its functioning:
+				<div class="body">Our core team continuously strives to explore new and intriguing possibilities that can optimize and enhance our design system. Here's a sneak peek into what we are currently working on.
 				</div>
 						<div class="subheading">Open sourcing our Design System</div>
-						<div class="body">Over the past 1.5 years, we have encountered and successfully tackled various people, technical, and design challenges and solved them through iterative processes. This experience has led us to develop an approach that effectively addresses these issues and allows us to accomplish our goals. We understand that system design problems are commonly faced by many teams, especially during the early stages of developing their system.
+						<div class="body">Over the past 1.5 years, we have encountered and successfully tackled various people, technical, and design challenges and solved them through iterative processes. This experience has led us to develop an approach that effectively addresses these issues and allows us to accomplish our goals. We understand that system design problems are commonly faced by many teams, especially during the early stages of development.
 							<br><p></p>
-							In light of this, we have been actively working towards open sourcing our system design and providing comprehensive documentation on our workflows. Our aim is to assist designers and engineers in navigating through the majority of problems they encounter while creating a design system. By sharing our insights and approaches, we hope to contribute to the broader open source community and empower others to overcome similar challenges more efficiently.
+							In light of this, we have been actively working towards open sourcing our design system and providing comprehensive documentation on our workflows. Our aim is to assist designers and engineers in navigating through the majority of problems they encounter while creating a design system. By sharing our insights and approaches, we hope to contribute to the broader open source community and empower others to overcome similar challenges more efficiently.
 						</div>
 					   <div class="subheading">Experimentation Framework</div>
 					   <div class="body">Swiggy is entering a phase of intensive experimentation. We are actively exploring new possibilities by adapting our UI elements to better suit the needs of our customers. Additionally, we are developing new features with a strong focus on meeting user requirements and creating innovative experiences. 
 						<br><p></p>
-						Additionally, our Swiggy Food app just migrated completely and is 100% DLS complaint. For us to experiment anywhere in our app, we needed to bake this framework inside the system itself.
+						However, our Swiggy Food app just migrated completely and is 100% DLS complaint now. For us to experiment anywhere in our app, we need to bake this framework inside the system itself.
 						<img src="./resources/content_images/experimentation-Light.png" alt="" id="experimentation"><p></p>
 						Ignore my bad handwriting but this is the first draft of how our experimentation framework can function.
 					   </div>
@@ -135,7 +135,7 @@
 				<div class="lhs" style="width: 100%;">
 					<div class="heading"><span style="font-style: italic">fin.</span></div>
 					<div class="subheading">
-						I aspire to periodically update this website whenever I have new and substantial information to share with all of you. I look forward to continuing my contributions to the design system community and providing valuable insights in the future.
+						I aspire to periodically update this blog whenever I have new and substantial information to share with all of you. I look forward to continuing my contributions to the design system community and providing valuable insights in the future.
 					</div>
 				</div>
 			</div>
