--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			</div>
 			<div class="content">
 				<div class="heading">Deconstructing our system</div>
-				<div class="body">Attempting to talk about the intricacies of our design system would be a complex task. However, I will focus on three fundamental aspects that provide insights into its functioning:
+				<div class="body">Attempting to talk about the intricacies of our design system would be a complex task. However, I will focus on two fundamental aspects that provide insights into its functioning:
 				</div>
 						<div class="subheading">1. System Architecture</div>
 						<div class="body">The system is structured in a pretty conventional manner, divided into three distinct parts:</div>
